# register-evm-agent

./: Cargo.toml  canister_ids.json  dfx.json
solidity/: AggregatorProxy.sol
solidity/src/: AggregatorProxy.sol  AggregatorSingle.sol  ConfirmedOwner.sol  ConfirmedOwnerWithProposal.sol
solidity/src/interfaces/: AggregatorInterface.sol  AggregatorProxyInterface.sol  AggregatorV3Interface.sol  OwnableInterface.sol
solidity/test/: AggregatorProxy.t.sol  AggregatorSingle.t.sol
src/oracle_canister/: Cargo.toml  README.md  build.rs
src/oracle_canister/src/: build_data.rs  canister.rs  error.rs  evm_canister.rs  lib.rs  state.rs  timer.rs
src/oracle_canister/src/evm_canister/: account.rs  contract.rs  did.rs  error.rs
src/oracle_canister/src/state/: config.rs  http.rs  pair_price.rs
src/solidity-helper/: Cargo.toml
src/solidity-helper/src/: lib.rs
