[package]
name = "oracle_canister"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
export-api = []

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
candid = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true }
ic-stable-structures = { workspace = true }
is20-token = { workspace = true }
mockall = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
serde_bytes = { workspace = true }
ethereum-types = { workspace = true }
derive_more = { workspace = true }
ethers-core = { workspace = true }
hex = { workspace = true }
rlp = { workspace = true }
jsonrpc-core = { workspace = true }
once_cell = { workspace = true }


[build-dependencies]
solidity-helper = { path = "../solidity-helper" }
